fix: no more UI jumping when buffs hide
apparently opacity works now? (wasn't before which is why I was using display none to begin with...)

--- a/src/css/betterbuffsbar.css
+++ b/src/css/betterbuffsbar.css
@@ -126,7 +126,7 @@ body {
 }
 
 #BetterBuffsBar.hide-overlay #Buffs {
-  display: none;
+  opacity: 0;
 }
 
 #UntrackedBuffs {
